# core-platform

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  celery_app.py  main.py  mypy.ini  pyproject.toml
app/: main.py
app/ccxt/api/: future_order.py  market_data.py  marketdata.py  spot_order.py
app/ccxt/domain/: exchange.py
app/ccxt/dtos/: __init__.py  balance_dto.py  candle_dto.py  future_funding_rate_dto.py  order_book_dto.py  position_dto.py  status_dto.py  ticker_dto.py
app/ccxt/dtos/order/: limit_order_request_dto.py  limit_order_response_dto.py  market_order_request_dto.py  market_order_response_dto.py
app/ccxt/dtos/order/limit/: limit_order_request_dto.py  limit_order_response_dto.py
app/ccxt/dtos/order/market/: market_order_response_dto.py
app/ccxt/enums/: exchange_id.py  exchange_type.py  margin_mode.py  market_type.py  order_type.py  time_in_force.py
app/common/: enums.py
app/core/: __init__.py  config.py  container.py  logging.py
app/dto/: __init__.py  marketdata.py  trading.py
app/dtos/: __init__.py  ohlcv_dto.py  ohlcv_item_dto.py  order_book_dto.py  order_result_dto.py  ticker_dto.py
app/exchanges/: __init__.py  base.py
app/marketdata/: __init__.py  ccxt_ws.py  service.py
app/notifications/: __init__.py
app/risk/: manager.py
app/routers/: health.py  marketdata.py  trading.py
app/security/: access.py
app/services/: portfolio_service.py  trading_service.py
app/strategies/: base.py  ticker_printer.py
core_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dashboard/: streamlit_app.py
templates/: dashboard.html
tests/ccxt/: __init__.py  test_exchange.py  test_marketdata.py  test_order.py
